# First-Year-Cpp

a1/Example NN outputs/: mean.txt  sin(x).txt  x_squared.txt
a1/Example NN structures/: mean.txt  sin(x).txt  x_squared.txt
a1/files/: CMakeLists.txt  HiddenLayer.cpp  HiddenLayer.h  HiddenNeuron.cpp  HiddenNeuron.h  InputLayer.cpp  InputLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  OutputLayer.cpp  OutputLayer.h  act1.out  main.cpp  makefile
a2/: CMakeLists.txt  act1.out  board.cpp  board.h  main.cpp  makefile  piece.cpp  piece.h
a3/: CMakeLists.txt  ReturnStruct.h  main.cpp  schema.txt
a4/: Application.cpp  Application.h  CMakeLists.txt  Datalink.cpp  Datalink.h  Layer.cpp  Layer.h  Message.cpp  Message.h  Network.cpp  Network.h  Physical.cpp  Physical.h  Presentation.cpp  Presentation.h  Transport.cpp  Transport.h  main.cpp  makefile
p1/: makefile  recap.cpp
p3/: 21549967_p3.tar  CMakeLists.txt  act1.out  cauldron.cpp  cauldron.h  ingredient.cpp  ingredient.h  main.cpp  makefile  remove.txt
p4/: 21549967_P4.tar  CMakeLists.txt  act1.out  main.cpp  makefile  tome.cpp  tome.h
p5/: CMakeLists.txt  cargo.cpp  cargo.h  component.cpp  component.h  locomotive.cpp  locomotive.h  main.cpp
p6/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  train.cpp  train.h  trolley.cpp  trolley.h
p7/: CMakeLists.txt  main.cpp
p8/: CMakeLists.txt
sem1/Prac 1/: -f  21549967_COS132_Prac1.tar  COS132_Prac1.tgz  hello.cpp  main  makefile
sem1/Prac 2/: makefile  p2_21549967_matthews.tar  t1.cpp
sem1/Prac 4/: 21549967_prac4.tar  makefile
sem1/Prac 5/: 21549967_P5.tar  (+1 more)
(+56 files in other folders)
